# FPSE_proj

./: Readme.md  design_proposal.md  dune  dune-project  random_spotify_playlist.opam
frontend/: modifylist.js  styles.css
src/: authentication.ml  authentication.mli  dune  main.ml  spotifyapi.ml  spotifyapi.mli  template.eml.html
test/: dune  tests.ml
